--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <input type="text" id="txt" onKeyUp="java script: comprobarletra(this.value);">
     <div id="root">
       <h1>Hello world!</h1>
     </div>
-    <script src="index.js" type="module"></script>
+    <script type="text/javascript">
+      var strLetra = 209;
+      function comprobarletra(strValor){		
+        if(strValor.charCodeAt(0) == strLetra){
+          alert("Entra");
+        }
+      }src="index.js"</script>
   </body>
 </html>
