--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input type="text" id="txt" onKeyUp="java script: comprobarletra(this.value);">
+    <input type="text" id="txt" onKeyUp=java script: comprobarletra(this.value);>
     <div id="root">
       <h1>Hello world!</h1>
     </div>
