--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input type="text" id="txt" onKeyUp=java script: comprobarletra(this.value);>
-    <div id="root">
       <h1>Hello world!</h1>
+      <input type="button" value="loadNewPage" onclick="newPage()">
+
     </div>
-    <script type="text/javascript">
-      var strLetra = 209;
-      function comprobarletra(strValor){		
-        if(strValor.charCodeAt(0) == strLetra){
-          alert("Entra");
-        }
-      }src="index.js"</script>
+    <script></script>
   </body>
 </html>
