--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Caesar Cipher</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img src="proteger.png" class="img"/>
     <div id="root">
-      <h1>Hello world!</h1>
+      <h1>CODEME</h1>
+      <form id="form"> 
+        <label class= "subt" for="nickname">NICKNAME:</label><br><br>
+        <input type="text" placeholder="Ingresa un nickname" id="nickname" name="nickname"><br><br>
+        <label class= "subt" for="level" >NIVEL DE CODIFICACIÓN</label><br><br>
+        <input id= "userOffset" type="range" value= "5" min="1" max="10" oninput="this.nextElementSibling.value = this.value">
+        <output class="subt">5</output>
+      </form>
+      <button onclick= "window.location.href='decode.html';" class="button" id="decode">DECODE</button>
+      <button onclick= "window.location.href='encode.html';"class="button" id="encode">ENCODE</button>
     </div>
     <script src="index.js" type="module"></script>
   </body>
