--- a/src/encode.html
+++ b/src/encode.html
@@ -13,12 +13,12 @@
     <div id="root">
       <h1>CODEME</h1>
       <form>
-        <label class= "subt" for="mensaje">MENSAJE:</label><br><br>
+        <label class= "subt" for="mensaje">MENSAJE CIFRADO:</label><br><br>
         <input type="text" placeholder="Ingresa el mensaje" id="mensaje" name="mensaje"><br><br>
-        <label class= "subt" for="coded" >MENSAJE CODIFICADO:</label><br><br>
+        <label class= "subt" for="coded">TRADUCCIÓN:</label><br><br>
         <input type="text" id= "coded" name="coded">
       </form>
-      <button class="button" id="decode">ENCODE</button>
+      <button class="button" id="encode">ENCODE</button>
     </div>
     <script src="index.js" type="module"></script>
   </body>
