--- a/src/encode.html
+++ b/src/encode.html
@@ -12,13 +12,11 @@
     <img src="proteger.png" class="img"/>
     <div id="root">
       <h1>CODEME</h1>
-      <form>
         <label class= "subt" for="mensaje">MENSAJE CIFRADO:</label><br><br>
-        <input type="text" placeholder="Ingresa el mensaje" id="mensaje" name="mensaje"><br><br>
-        <label class= "subt" for="coded">TRADUCCIÓN:</label><br><br>
-        <input type="text" id= "coded" name="coded">
-      </form>
-      <button class="button" id="encode">ENCODE</button>
+        <input type="text" placeholder="Ingresa el mensaje" id="msgEncode" name="msgEncode"><br><br>
+        <label class= "subt" for="output">TRADUCCIÓN:</label><br><br>
+        <input type="textbox" id= "output" name="output"><br><br>
+      <button class="button" id="encodeMsg">ENCODE</button>
     </div>
     <script src="index.js" type="module"></script>
   </body>
