--- a/src/decode.html
+++ b/src/decode.html
@@ -12,13 +12,11 @@
     <img src="proteger.png" class="img"/>
     <div id="root">
       <h1>CODEME</h1>
-      <form>
         <label class= "subt" for="mensaje">MENSAJE:</label><br><br>
         <input type="text" placeholder="Ingresa el mensaje" id="mensaje" name="mensaje"><br><br>
         <label class= "subt" for="coded" >MENSAJE CODIFICADO:</label><br><br>
-        <input type="text" id= "coded" name="coded">
-      </form>
-      <button class="button" id="decode">ENCODE</button>
+        <input type="text" id= "coded" name="coded"><br><br>
+      <button class="button" id="decode">DECODE</button><br><br>
     </div>
     <script src="index.js" type="module"></script>
   </body>
