--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <input id= "userOffset" type="range" value= "5" min="1" max="10" oninput="this.nextElementSibling.value = this.value">
         <output class="subt">5</output><br><br>
       </form>
-      <button onclick= "window.location.href='decode.html';" class="button" id="decode">DECODE</button>
+      <button class="button" id="decodeOption">DECODE</button>
       <button class="button" id="encodeOption">ENCODE</button>
     </div>
     <script src="index.js" type="module"></script>
