--- a/src/encode.html
+++ b/src/encode.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="proteger.png" class="img"/>
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="mensaje">MENSAJE CIFRADO:</label><br><br>
@@ -20,3 +19,4 @@
     </div>
     <script src="index.js" type="module"></script>
   </body>
+</html>
