--- a/src/decode.html
+++ b/src/decode.html
@@ -15,7 +15,8 @@
         <input type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
         <label class= "subt" for="output" >MENSAJE CODIFICADO:</label><br><br>
         <input type="textbox" id= "output" name="output"><br><br>
-      <button class="button" id="decodeMsg">DECODE</button><br><br>
+      <button class="button" id="decodeButton">DECODE</button><br><br>
+      <button class="gobackbutton" id="goback">VOLVER</button><br><br>
     </div>
     <script src="index.js" type="module"></script>
   </body>
