--- a/src/encode.html
+++ b/src/encode.html
@@ -15,7 +15,8 @@
         <input type="text" placeholder="Ingresa el mensaje" id="msgEncode" name="msgEncode"><br><br>
         <label class= "subt" for="output">TRADUCCIÓN:</label><br><br>
         <input type="textbox" id= "output" name="output"><br><br>
-      <button class="button" id="encodeMsg">ENCODE</button>
+      <button class="button" id="encodeButton">ENCODE</button><br><br>
+      <button class="gobackbutton" id="goback">VOLVER</button>
     </div>
     <script src="index.js" type="module"></script>
   </body>
