--- a/src/decode.html
+++ b/src/decode.html
@@ -12,9 +12,9 @@
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="mensaje">MENSAJE:</label><br><br>
-        <input type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
+        <input class="inputBox" type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
         <label class= "subt" for="output" >MENSAJE CODIFICADO:</label><br><br>
-        <input type="textbox" id= "output" name="output"><br><br>
+        <input class="inputBox" type="textbox" id= "output" name="output"><br><br>
       <button class="button" id="decodeButton">DECODE</button><br><br>
       <button class="gobackbutton" id="goback">VOLVER</button><br><br>
     </div>
