--- a/src/encode.html
+++ b/src/encode.html
@@ -12,9 +12,9 @@
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="mensaje">MENSAJE CIFRADO:</label><br><br>
-        <input type="text" placeholder="Ingresa el mensaje" id="msgEncode" name="msgEncode"><br><br>
+        <input class="inputBox" type="text" placeholder="Ingresa el mensaje" id="msgEncode" name="msgEncode"><br><br>
         <label class= "subt" for="output">TRADUCCIÓN:</label><br><br>
-        <input type="textbox" id= "output" name="output"><br><br>
+        <input class="inputBox" type="textbox" id= "output" name="output"><br><br>
       <button class="button" id="encodeButton">ENCODE</button><br><br>
       <button class="gobackbutton" id="goback">VOLVER</button>
     </div>
