--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="level" >NIVEL DE CODIFICACIÓN</label><br><br>
-        <input id= "userOffset" type="range" value= "5" min="1" max="10" oninput="this.nextElementSibling.value = this.value">
-        <output class="subt">5</output><br><br>
+        <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10">
+        <output id="outputOffset" class="subt">5</output><br><br>
       </form>
       <button class="button" id="decodeOption">DECODE</button>
       <button class="button" id="encodeOption">ENCODE</button>
