--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="proteger.png" class="img"/>
+    <img src="proteger.png" class="img">
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="level" >NIVEL DE CODIFICACIÓN</label><br><br>
