--- a/src/decode.html
+++ b/src/decode.html
@@ -8,9 +8,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
+  <h1>CODEME</h1>
   <body>
-    <div id="root">
-      <h1>CODEME</h1>
+    <div id="root"><br><br>
         <label class= "subt" for="mensaje">MENSAJE:</label><br><br>
         <input type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
         <label class= "subt" for="output" >MENSAJE CODIFICADO:</label><br><br>
