--- a/src/decode.html
+++ b/src/decode.html
@@ -11,9 +11,9 @@
   <h1>CODEME</h1>
   <body>
     <div id="root"><br><br>
-        <label class= "subt" for="mensaje">MENSAJE:</label><br><br>
+        <label class= "subt" for="mensaje">MENSAJE CODIFICADO:</label><br><br>
         <input class="inputBox" type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
-        <label class= "subt" for="output" >MENSAJE CODIFICADO:</label><br><br>
+        <label class= "subt" for="output" >TRADUCCIÓN:</label><br><br>
         <input class="inputBox" type="textbox" id= "output" name="output"><br><br>
       <button class="button" id="decodeButton">DECODE</button><br><br>
       <button class="gobackbutton" id="goback">VOLVER</button><br><br>
