--- a/src/index copy.html
+++ b/src/index copy.html
@@ -5,9 +5,7 @@
     <title>Caesar Cipher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="<link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Monofett&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -17,6 +15,7 @@
         <label class= "subt" for="level" >NIVEL DE CODIFICACIÓN</label><br><br>
         <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10">
         <output id="outputOffset" class="subt">5</output><br><br>
+        <button class="button" id="encodeOption">ENCODE</button>
       <button class="button" id="decodeOption">DECODE</button>
     </div>
     <script src="index.js" type="module"></script>
