cambio al inglés

--- a/src/decode.html
+++ b/src/decode.html
@@ -10,12 +10,12 @@
   <h1>CODEME</h1>
   <body>
     <div id="root"><br><br>
-        <label class= "subt" for="mensaje">MENSAJE CODIFICADO:</label><br><br>
+        <label class= "subt" for="mensaje">ENCODED MESSAGE:</label><br><br>
         <input class="inputBox" type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
-        <label class= "subt" for="output" >TRADUCCIÓN:</label><br><br>
+        <label class= "subt" for="output" >TRANSLATION:</label><br><br>
         <input class="inputBox" type="textbox" id= "output" name="output"><br><br>
       <button class="button" id="decodeButton">DECODE</button><br><br>
-      <button class="gobackbutton" id="goback">VOLVER</button><br><br>
+      <button class="gobackbutton" id="goback">GO BACK</button><br><br>
     </div>
     <script src="index.js" type="module"></script>
   </body>
