--- a/src/landing.html
+++ b/src/landing.html
@@ -11,7 +11,7 @@
     <img src="proteger.png" class="img">
     <div id="root">
       <h1>CODEME</h1>
-        <label class= "subt" for="level" >NIVEL DE CODIFICACIÓN</label><br><br>
+        <label class= "subt" for="level" >LEVEL</label><br><br>
         <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10">
         <output id="outputOffset" class="subt">5</output><br><br>
         <button class="button" id="encodeOption">ENCODE</button>
