--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>Caesar Cipher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&display=swap" rel="stylesheet">
+<link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Monofett&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
