--- a/src/encode.html
+++ b/src/encode.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <title>Caesar Cipher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Monofett&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Monofett&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <h1>CODEME</h1>
