--- a/src/decode.html
+++ b/src/decode.html
@@ -14,7 +14,8 @@
         <input class="inputBox" type="text" placeholder="Ingresa el mensaje" id="msgDecode" name="mensaje"><br><br>
         <button class="button" id="decodeButton">DECODE</button><br><br>
         <label class= "subt" for="output" >TRANSLATION:</label><br><br>
-        <input class="inputBox" type="textbox" id= "output" name="output"><br><br>
+        <input class="inputBox" type="textbox" id= "output" name="output">
+        <button id="copyButton">Copy</button><br><br>
       <button class="gobackbutton" id="goback">GO BACK</button><br><br>
     </div>
     <script src="index.js" type="module"></script>
