--- a/src/encode.html
+++ b/src/encode.html
@@ -14,7 +14,8 @@
         <input class="inputBox" type="text" placeholder="Ingresa el mensaje" id="msgEncode" name="msgEncode"><br><br>
         <button class="button" id="encodeButton">ENCODE</button><br><br>
         <label class= "subt" for="output">ENCODED MESSAGE:</label><br><br>
-        <input class="inputBox" type="textbox" id= "output" name="output"><br><br>
+        <input class="inputBox" type="textbox" id= "output" name="output">
+        <button class="copy" id="copyButton">Copy</button><br><br>
       <button class="gobackbutton" id="goback">GO BACK</button>
     </div>
     <script src="index.js" type="module"></script>
