--- a/src/encode.html
+++ b/src/encode.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Monofett&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon"  type="image/png" href="LOGO.png">
   </head>
   <h1>CODEME</h1>
   <body>
@@ -15,7 +16,7 @@
         <button class="button" id="encodeButton">ENCODE</button><br><br>
         <label class= "subt" for="output">ENCODED MESSAGE:</label><br><br>
         <input class="inputBox" type="textbox" id= "output" name="output">
-        <button class="copy" id="copyButton">Copy</button><br><br>
+        <button id="copyButton">Copy</button><br><br>
       <button class="gobackbutton" id="goback">GO BACK</button>
     </div>
     <script src="index.js" type="module"></script>
