--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
   <body>
     <img src="proteger.png" class="img">
       <h1>CODEME</h1>
-        <label class= "intro" for="level" >sabemos lo importante que es poder comunicarse en tiempos difíciles, te ofrecemos nuestro codificador para mensajes seguros, basado en el Código César.
+        <p class= "intro" for="level" >sabemos lo importante que es poder comunicarse en tiempos difíciles, te ofrecemos nuestro codificador para mensajes seguros, basado en el Código César.
           De esta manera te aseguras de que tus mensajes no sean intervenidos o eliminados de tu chat por contener palabras relacionadas al conflicto.
           Te invitamos a probarlo y darle buen uso.
-          </label><br><br>
-        <button class="button" id="encodeOption">START</button>
+        </p><br><br>
+        <button class="startButton" id="startOption">START</button>
     <script src="index.js" type="module"></script>
   </body>
 </html>
