--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <img src="proteger.png" class="img">
-      <h1>CODEME</h1>
+      <h1>CODEME</h1><br><br>
         <p class= "intro" for="level" >We know how difficult it is to communicate in conflict zones, so we offer you this cipher based on the Caesar Code.
           Just choose a level and the ENCODE option, then you can send your friends the encoded message and the encoding level so they can decode it in CODEME.
           Try it out and put it to good use!
