--- a/src/decode.html
+++ b/src/decode.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon"  type="image/png" href="LOGO.png">
   </head>
   <h1>CODEME</h1>
   <body>
