--- a/src/landing.html
+++ b/src/landing.html
@@ -13,7 +13,7 @@
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="level" >LEVEL</label><br><br>
-        <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10">
+        <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10"><br><br>
         <output id="outputOffset" class="subt">5</output><br><br>
         <button class="button" id="encodeOption">ENCODE</button>
       <button class="button" id="decodeOption">DECODE</button>
