--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,9 @@
         </p><br><br>
         <button class="startButton" id="startOption">START</button>
     <script src="index.js" type="module"></script>
+    <footer>
+      <p>Author: Hege Refsnes<br>
+      <a href="mailto:hege@example.com">hege@example.com</a></p>
+    </footer>
   </body>
 </html>
