--- a/src/landing.html
+++ b/src/landing.html
@@ -20,5 +20,8 @@
       <button class="button" id="decodeOption">DECODE</button>
     </div>
     <script src="index.js" type="module"></script>
+    <footer>
+      <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
+    </footer>
   </body>
 </html>
