--- a/src/encode.html
+++ b/src/encode.html
@@ -21,5 +21,8 @@
       <button class="gobackbutton" id="goback">GO BACK</button>
     </div>
     <script src="index.js" type="module"></script>
+    <footer>
+      <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
+    </footer>
   </body>
 </html>
