--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
         <button class="startButton" id="startOption">START</button>
     <script src="index.js" type="module"></script>
     <footer>
-      <p>Author: Hege Refsnes<br>
-      <a href="mailto:hege@example.com">hege@example.com</a></p>
+      <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
     </footer>
   </body>
 </html>
