--- a/src/encode.html
+++ b/src/encode.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Caesar Cipher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Monofett&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon"  type="image/png" href="LOGO.png">
   </head>
@@ -17,7 +17,7 @@
         <button class="button" id="encodeButton">ENCODE</button><br><br>
         <label class= "subt" for="output">ENCODED MESSAGE:</label><br><br>
         <input class="inputBox" type="textbox" id= "output" name="output">
-        <button id="copyButton">Copy</button><br><br>
+        <button class="copy" id="copyButton">Copy</button><br><br>
       <button class="gobackbutton" id="goback">GO BACK</button>
     </div>
     <script src="index.js" type="module"></script>
