--- a/src/landing.html
+++ b/src/landing.html
@@ -10,7 +10,7 @@
     <link rel="icon"  type="image/png" href="LOGO.png">
   </head>
   <body>
-    <img src="proteger.png" class="img">
+    <img src="proteger.png" class="img"><br><br>
     <div id="root">
       <h1>CODEME</h1>
         <label class= "subt" for="level" >LEVEL</label><br><br>
@@ -20,8 +20,9 @@
       <button class="button" id="decodeOption">DECODE</button>
     </div>
     <script src="index.js" type="module"></script>
-    <footer>
-      <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
-    </footer>
   </body>
+  <footer>
+    <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
+   </footer>
+
 </html>
