--- a/src/encode.html
+++ b/src/encode.html
@@ -22,7 +22,7 @@
     </div>
     <script src="index.js" type="module"></script>
     <footer>
-      <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
+      <p>Author:Francisca Caro , Carolina Zapata. 2022©</p>
     </footer>
   </body>
 </html>
