--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <button class="startButton" id="startOption">START</button>
     <script src="index.js" type="module"></script>
     <footer>
-      <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
+      <p>Author:Francisca Caro, Carolina Zapata. 2022©</p>
     </footer>
   </body>
 </html>
