--- a/src/landing.html
+++ b/src/landing.html
@@ -22,7 +22,7 @@
     <script src="index.js" type="module"></script>
   </body>
   <footer>
-    <p>Author:Francisca Caro & Carolina Zapata. 2022©</p>
+    <p>Author:Francisca Caro, Carolina Zapata. 2022©</p>
    </footer>
 
 </html>
