--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Caesar Cipher</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon"  type="image/png" href="LOGO.png">
+    <link rel="icon" type="image/png" href="LOGO.png" />
   </head>
   <body>
-    <img src="proteger.png" class="img">
-      <h1>CODEME</h1><br><br>
-        <p class= "intro" for="level" >We know how difficult it is to communicate in conflict zones, so we offer you this cipher based on the Caesar Code.
-          Just choose a level and the ENCODE option, then you can send your friends the encoded message and the encoding level so they can decode it in CODEME.
-          Try it out and put it to good use!
-        </p><br><br>
-        <button class="startButton" id="startOption">START</button>
+    <div class="main-page">
+      <img src="proteger.png" class="img" />
+      <h1>CODEME</h1>
+        <p class="intro">
+          We know how difficult it is to communicate in conflict zones, so we offer
+          you this cipher based on the Caesar Code. Just choose a level and the
+          ENCODE option, then you can send your friends the encoded message and the
+          encoding level so they can decode it in CODEME. Try it out and put it to
+          good use!
+        </p>
+      <button class="button" id="startOption">START</button>
+    </div>
     <script src="index.js" type="module"></script>
-    <footer>
-      <p>Author:Francisca Caro, Carolina Zapata. 2022©</p>
-    </footer>
   </body>
 </html>
