--- a/src/landing.html
+++ b/src/landing.html
@@ -10,19 +10,17 @@
     <link rel="icon"  type="image/png" href="LOGO.png">
   </head>
   <body>
-    <img src="proteger.png" class="img"><br><br>
-    <div id="root">
+    <div class="main-page">
+      <img src="proteger.png" class="img">
+      <div class="box">
       <h1>CODEME</h1>
-        <label class= "subt" for="level" >LEVEL</label><br><br>
-        <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10"><br><br>
-        <output id="outputOffset" class="subt">5</output><br><br>
+        <label class= "subt" for="level" >LEVEL</label>
+        <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10">
+        <output id="outputOffset" class="subt">5</output>
         <button class="button" id="encodeOption">ENCODE</button>
       <button class="button" id="decodeOption">DECODE</button>
     </div>
+    </div>
     <script src="index.js" type="module"></script>
   </body>
-  <footer>
-    <p>Author:Francisca Caro, Carolina Zapata. 2022©</p>
-   </footer>
-
 </html>
