--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,14 @@
   </head>
   <body>
     <div class="main-page">
-      <img src="proteger.png" class="img" />
       <h1>CODEME</h1>
-        <p class="intro">
-          We know how difficult it is to communicate in conflict zones, so we offer
-          you this cipher based on the Caesar Code. Just choose a level and the
-          ENCODE option, then you can send your friends the encoded message and the
-          encoding level so they can decode it in CODEME. Try it out and put it to
-          good use!
-        </p>
+      <p class="intro">
+        We know how difficult it is to communicate in conflict zones, so we
+        offer you this cipher based on the Caesar Code. Just choose a level and
+        the ENCODE option, then you can send your friends the encoded message
+        and the encoding level so they can decode it in CODEME. Try it out and
+        put it to good use!
+      </p>
       <button class="button" id="startOption">START</button>
     </div>
     <script src="index.js" type="module"></script>
