--- a/src/landing.html
+++ b/src/landing.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Caesar Cipher</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Jockey+One&family=Monofett&family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon"  type="image/png" href="LOGO.png">
+    <link rel="icon" type="image/png" href="LOGO.png" />
   </head>
   <body>
     <div class="main-page">
-      <img src="proteger.png" class="img">
-      <div class="box">
       <h1>CODEME</h1>
-        <label class= "subt" for="level" >LEVEL</label>
-        <input class="slider" id= "userOffset" type="range" value= "5" min="1" max="10">
+      <div class="box">
+        <label class="subt" for="level">LEVEL</label>
+        <input
+          class="slider"
+          id="userOffset"
+          type="range"
+          value="5"
+          min="1"
+          max="10"
+        />
         <output id="outputOffset" class="subt">5</output>
         <button class="button" id="encodeOption">ENCODE</button>
-      <button class="button" id="decodeOption">DECODE</button>
-    </div>
+        <button class="button" id="decodeOption">DECODE</button>
+      </div>
     </div>
     <script src="index.js" type="module"></script>
   </body>
