--- a/src/encode.html
+++ b/src/encode.html
@@ -20,7 +20,7 @@
       <input
         class="inputBox"
         type="text"
-        placeholder="Ingresa el mensaje"
+        placeholder="Write the message to encode"
         id="msgEncode"
         name="msgEncode"
       />
