--- a/decode.html
+++ b/decode.html
@@ -20,7 +20,7 @@
         <input
           class="inputBox"
           type="text"
-          placeholder="Ingresa el mensaje"
+          placeholder="Write the message to decode"
           id="msgDecode"
           name="mensaje"
         />
